fix alignment issue, remove unnecessary changes

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -91,7 +91,7 @@ $people-picker-selected-person-avatar-size: var(--people-picker-selected-person-
       display: flex;
       column-gap: 5px;
       border-radius: 100px;
-      margin-top: 4px;
+      margin-top: 3px;
       background-color: $selected-option-bg;
 
       &.highlighted {
@@ -123,7 +123,6 @@ $people-picker-selected-person-avatar-size: var(--people-picker-selected-person-
   fluent-card {
     margin-top: 4px;
     background-color: $dropdown-card-color;
-    overflow: auto;
   }
 
   .searched-people-list {
